--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "framer-motion": "^12.26.2",
     "next": "15.5.5",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "recharts": "^3.2.1"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
